<resources>

    <string name="app_name">Movie Database</string>

    <string name="menu_popular">Most Popular</string>
    <string name="menu_highest_rate">Highest Rated</string>
    <string name="release_date_title">Release Date</string>
    <string name="rating_title">Rating</string>
    <string name="summary_title">Summary</string>
    <string name="favorite_title">Favorite</string>
    <string name="trailers_title">Trailers</string>

    <string name="exception_socket_timeout">timeout error connecting to MovieDB</string>
    <string name="exception_general">error connecting to the MovieDB</string>

</resources>
