<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    tools:context=".DetailActivity"

    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:paddingTop="@dimen/padding_top"
        android:paddingLeft="@dimen/padding_left"
        style="@style/Base.TextAppearance.AppCompat.Large"
        tools:text="Title"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="110dp"
            android:paddingTop="@dimen/padding_top"
            android:paddingLeft="@dimen/padding_left"
            android:layout_height="match_parent"
            android:contentDescription="TODO" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_top"
            android:paddingLeft="@dimen/padding_left"
            android:orientation="vertical">

            <TextView
                tools:text="Release Date Title: "
                android:text="@string/release_date_title"
                android:id="@+id/tv_release_date_title"
                style="@style/AlertDialog.AppCompat.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                tools:text="Release Date: "
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/tv_release_date"
                android:textSize="@dimen/normal_text"
                />

            <TextView
                tools:text="Rating Title: "
                android:text="@string/rating_title"
                android:id="@+id/tv_vote_average_title"
                style="@style/AlertDialog.AppCompat.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                tools:text="Rating: "
                android:id="@+id/tv_vote_average"
                android:textSize="@dimen/normal_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_top"
            android:paddingLeft="@dimen/padding_left"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text"
                style="@style/AlertDialog.AppCompat.Light"
                android:text="@string/favorite_title"
                tools:text="Favorite"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>



    </LinearLayout>

    <TextView
        android:id="@+id/tv_overview_title"
        tools:text="Summary Title"
        android:text="@string/summary_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_top"
        android:paddingLeft="@dimen/padding_left"
        style="@style/Base.TextAppearance.AppCompat.Large"
        />



        <TextView
            tools:text="Summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_left"
            android:id="@+id/tv_overview"
            android:textSize="@dimen/normal_text"
            />


    <TextView
        android:id="@+id/tv_trailers_title"
        tools:text="Trailers Title"
        android:text="@string/trailers_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_top"
        android:paddingLeft="@dimen/padding_left"
        style="@style/Base.TextAppearance.AppCompat.Large"
        />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_trailers"
            android:paddingLeft="@dimen/padding_left"
            android:paddingTop="@dimen/padding_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tv_movie_reviews"
            android:paddingTop="@dimen/padding_top"
            android:paddingLeft="@dimen/padding_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reviews"
            style="@style/Base.TextAppearance.AppCompat.Large"
            />

        <android.support.v7.widget.RecyclerView
            android:paddingLeft="@dimen/padding_left"
            android:id="@+id/rv_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

</LinearLayout>

</ScrollView>